# mr2_pkg

./: README.md
mr2_control/: CMakeLists.txt  package.xml
mr2_control/config/: simple_controller.yaml
mr2_control/launch/: mr2_control.launch
mr2_description/: CMakeLists.txt  package.xml
mr2_description/launch/: display_mr2.launch  display_mr2_2.launch
mr2_description/launch/config/: mr2.rviz
mr2_description/meshes/: base.STL  base_2.STL  leg1.STL  leg1_2.STL  leg2.STL  leg2_2.STL  leg3.STL  leg3_2.STL
mr2_description/robots/: mr2.urdf.xacro  mr2_2.urdf.xacro
mr2_description/urdf/: common.xacro
mr2_description/urdf/base/: base.urdf.xacro  base_2.urdf.xacro
mr2_description/urdf/legs/: leg.gazebo.xacro  leg.transmission.xacro  leg.urdf.xacro  leg1.urdf.xacro  leg1_2.urdf.xacro  leg2.urdf.xacro  leg2_2.urdf.xacro  leg3.urdf.xacro  leg3_2.urdf.xacro  leg_2.transmission.xacro  leg_2.urdf.xacro
mr2_description/urdf/sensors/imu/: imu.gazebo.xacro  imu.urdf.xacro
mr2_description/urdf/servo_motors/: servo_motors.xacro
mr2_driver/: CMakeLists.txt  package.xml
mr2_driver/config/: mr2_controller.yaml  mr2_driver.yaml  realbot_offsets.yaml  simbot_offsets.yaml
mr2_driver/csv/: .~lock.normal_gait.csv#  normal_gait.csv  sand_dune_gait.csv  tussock_gait.csv
mr2_driver/include/: ik_solver.h  transformation.h
mr2_driver/launch/: normal_gait.launch  power_on.launch  sand_dune.launch  sand_dune_sim.launch  setting.launch  test_run.launch  test_run_sim.launch  tussock_gait.launch
mr2_driver/msg/: LegsCommands.msg
mr2_driver/src/: .ik_solver.cpp.swp  .normal_gait.cpp.swp  command_publisher.cpp  csv_gait.cpp  gait.cpp  ik_solver.cpp  normal_gait.cpp  sand_dune.cpp  setting.cpp  simple_creep_gait.cpp  simple_rotation.cpp  transformation.cpp  tussock_gait.cpp
mr2_gazebo/: CMakeLists.txt  package.xml
mr2_gazebo/launch/: mr2_2_with_empty_world.launch  mr2_with_empty_world.launch
